--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,22 +7,30 @@
     "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
+    "@mui/x-date-pickers": "^6.19.7",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
